--- a/app.yaml
+++ b/app.yaml
@@ -1,10 +1,6 @@
-runtime: python37
+runtime: python39
 
-handlers:
-  - url: /
-    script: main.app
-  - url: /predict
-    script: main.app
+instance_class: F4_1G
 
 env_variables:
   CLOUD_SQL_USERNAME: gtw
